added parameters in HADOOP_OPTS to ensure runtime execution